added simon user, bootstrap script and seperated bootstrap tasks from site.yml into bootstrap.yml

--- a/site.yml
+++ b/site.yml
@@ -3,38 +3,22 @@
  - hosts: all
    become: true
    tasks:
-   - name: install updates (CentOS)
+   - name: update repo cache (CentOS)
      dnf:
        update_only: yes
        update_cache: yes
+     changed_when: false
      when: ansible_distribution == "CentOS"
  
-   - name: install updates (Ubuntu)
+   - name: update repo cache (Ubuntu)
      apt:
        upgrade: dist
        update_cache: yes
+     changed_when: false
      when: ansible_distribution == "Ubuntu"
 
 
- - hosts: workstations 
-   become: true
-   tasks:
 
-     - name : install unzip
-       package :
-         name : unzip
-
-     - name : install terraform
-       unarchive :
-         src : https://release.hasicorp.com/terraform/0.12.28/terraform_0.12.28_linux_amd64.zip
-         dest: /usr/local/bin
-         remote_src: yes
-         mode : 0755
-         owner: root
-         group: root
-
-
- 
  - hosts: web_servers
    become: true
    tasks:
@@ -53,6 +37,15 @@
          - httpd
          - php
        state: latest
+     when: ansible_distribution == "CentOS"
+
+
+   - name: start httpd(centos)
+     tags: apache,centos,httpd
+     service: 
+       name: httpd
+       state: started
+       enabled: yes 
      when: ansible_distribution == "CentOS"
 
    - name : copy default html file for site
